# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db_tools.py  urls.py
page_analyzer/templates/: base.html  index.html  layout.html  page404.html  show.html  url_info.html  url_show.html  urls.html
