[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ekaterina Konstantinova <feldsher2812@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
